# MCP-server-with-langchain-client

./: INSTRUCTIONS.md  Peek Challenge.postman_collection.json  README.md
client/: .env.example  main.py  pyproject.toml
client/ai/: attendance_agent.py  graph.py  mcp_client.py  state.py
client/config/: logging_config.py
client/controller/: ask_controller.py
client/dto/: chat_input.py  chat_output.py
client/utils/: exception_handler.py
server/: main.py  pyproject.toml  pytest.ini
server/config/: logging_config.py
server/data/: customers.json  orders.json
server/model/: customer.py  order.py
server/service/: customer_service.py  order_service.py
server/tests/: test_customer_service.py  test_order_service.py
server/tools/: customer_tools.py  order_tools.py
